--- a/index.html
+++ b/index.html
@@ -214,6 +214,27 @@ turtle.set_defaults(
 )
 t = turtle.Turtle()
 
+turtle.speed(5)
+turtle.bgcolor("black")
+
+def curve():
+    for i in range(200):
+        turtle.right(1)
+        turtle.forward(1)
+
+turtle.color("red", "pink")
+
+turtle.begin_fill()
+turtle.left(140)
+turtle.forward(111.65)
+curve()
+
+turtle.left(120)
+curve()
+turtle.forward(111.65)
+turtle.end_fill()
+turtle.hideturtle()
+    
 t.width(5)
 
 for c in ['red', '#00ff00', '#fa0', 'rgb(0,0,200)']:
@@ -232,7 +253,11 @@ t.dot(40, 'rgba(0, 0, 255, 0.5')
 
 t.goto(0, 125)
 t.color('purple')
-t.write("I love Brython!", font=("Arial", 20, "normal"))
+t.write("I love you, Xavier!", font=("Arial", 20, "normal"))
+    
+t.goto(0, 125)
+t.color('purple')
+t.write("I love you, Xavier!", font=("Arial", 20, "normal"))
 
 
 turtle.done()
