--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ turtle.set_defaults(
 t = turtle.Turtle()
 
 turtle.speed(5)
-turtle.bgcolor("black")
+turtle.bgcolor('rgb(64,64,64)')
 
 def curve():
     for i in range(200):
@@ -235,7 +235,7 @@ t.dot(40, 'rgba(0, 0, 255, 0.5')
 
 t.goto(-30, 125)
 t.color('purple')
-t.write("I love you, Xavier!", font=("Arial", 20, "normal"))
+t.write("I love you, Xavier!", font=("Calibri", 30, "bold"))
 
 
 turtle.done()
