--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ t.dot(40, 'rgba(0, 0, 255, 0.5')
 
 t.goto(-30, 125)
 t.color('purple')
-t.write("I love you, Xavier!", font=("Calibri", 30, "bold"))
+t.write("I love you,\nXavier!", font=("Calibri", 30, "bold"))
 
 
 turtle.done()
