--- a/index.html
+++ b/index.html
@@ -233,9 +233,12 @@ t.dot(40, 'rgba(0, 255, 0, 0.5')
 t.goto(0, -70)
 t.dot(40, 'rgba(0, 0, 255, 0.5')
 
-t.goto(-30, 125)
+t.goto(-75, 125)
 t.color('purple')
-t.write("I love you,\nXavier!", font=("Calibri", 30, "bold"))
+t.write("I love you", font=("Calibri", 30, "bold"))
+t.goto(-75, 90)
+t.color('purple')
+t.write("Xavier!", font=("Calibri", 30, "bold"))
 
 
 turtle.done()
