--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ window.addEventListener( "load", function () {
     let XHR = new XMLHttpRequest();
 
     // Bind the FormData object and the form element
-    var patsName = document.getElementById( "name" );
+    let patsName = document.getElementById( "name" );
     let url = new URL("https://gender-api.com/get?key=BcZxVToAbanAZMXrZA");
       url.searchParams.set("name", patsName);
 
@@ -27,7 +27,6 @@ window.addEventListener( "load", function () {
     
     // Set up our request
     XHR.open( "GET", url, false );
-    XHR.responseType = "json";
     XHR.send();
     XHR.onload = function() {
       let responseObj = XHR.response;
