--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 <script>
 window.addEventListener( "load", function () {
-  function sendData() {
+ 
+ const patsName = document.getElementById( "name" );
+    
+ function sendData() {
     let XHR = new XMLHttpRequest();
 
     // Bind the FormData object and the form element
-    var patsName = document.getElementById( "name" );
+    
     let url = new URL("https://gender-api.com/get?key=BcZxVToAbanAZMXrZA");
       url.searchParams.set("name", patsName);
 
