--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script>
 window.addEventListener( "load", function () {
  
- const patsName = document.getElementById( "name" );
+ const patsName = document.getElementById( "patsName" );
     
  function sendData() {
     let XHR = new XMLHttpRequest();
