--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ window.addEventListener( "load", function () {
   form.addEventListener( "submit", function ( event ) {
     event.preventDefault();
     sendData();
-    fetchData( url );
+    fetchData( );
   } );
 } );
 
