--- a/genderq.html
+++ b/genderq.html
@@ -9,7 +9,7 @@
 <form id="genderQ">
     <label for="patsName">What's Pat's name?</label>
     <input id="patsName" name="name" value="Pat">
-    <input type="submit" value="What's Pat?">
+    <input type="submit" value="What's Pat's gender?">
 </form>
 
 
